# LotusTracker

./: .clang-tidy  .gitignore  CMakeLists.txt
res/: resources.qrc
src/: asmCrashReport.cpp  asmCrashReport.h  config.h.in  credentials.h  ganalytics.cpp  ganalytics.h  lotustracker.cpp  lotustracker.h  macros.h  main.cpp  transformations.cpp  transformations.h  urls.h
src/api/: lotusapi.cpp  lotusapi.h  requestdata.h  rqtparsedeckposside.h  rqtplayerdeck.h  rqtplayerdeckpublish.h  rqtplayerdeckupdate.h  rqtupdateplayercollection.h  rqtupdateplayerinventory.h  rqtuploadeventresult.h  rqtuploadmatch.h  rqtuploadplayermatch.h  untappedapi.cpp  untappedapi.h
src/entity/: card.h  deck.cpp  deck.h  deckarch.h  matchinfo.cpp  matchinfo.h  matchplayer.h  matchstatediff.h  matchzone.h  matchzonetransfer.h  opponentinfo.h  user.h
src/mtg/: mtgalogparser.cpp  mtgalogparser.h  mtgalogwatcher.cpp  mtgalogwatcher.h  mtgamatch.cpp  mtgamatch.h  mtgarena.cpp  mtgarena.h  mtgcards.cpp  mtgcards.h  mtgdecksarch.cpp  mtgdecksarch.h
src/ui/: cardblinkinfo.h  deckoverlaybase.cpp  deckoverlaybase.h  deckoverlaydraft.cpp  deckoverlaydraft.h  deckoverlayopponent.cpp  deckoverlayopponent.h  deckoverlayplayer.cpp  deckoverlayplayer.h  preferences.ui  preferencesscreen.cpp  preferencesscreen.h  start.ui  startscreen.cpp  startscreen.h  tababout.cpp  tababout.h  tababout.ui  tabgeneral.cpp  tabgeneral.h  tablogs.cpp  tablogs.h  taboverlay.cpp  taboverlay.h  trayicon.cpp  trayicon.h
src/updater/: macsparkleupdater.h  sparkleupdater.h  winsparkleupdater.cpp  winsparkleupdater.h
src/utils/: WinWindowFinder.cpp  WinWindowFinder.h  appsecure.cpp  appsecure.h  appsettings.cpp  appsettings.h  cocoainitializer.h  influxdb.hpp  linuxwindowfinder.cpp  linuxwindowfinder.h  logger.cpp  logger.h  lotusexception.h  macautostart.cpp  macautostart.h  macwindowfinder.cpp  macwindowfinder.h  metrics.cpp  metrics.h  winautostart.cpp  winautostart.h
tests/: macros_test.h  main.cpp  testmtgalogparser.hpp  testmtgamatch.hpp
